--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Barrio&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap');
 
 *{
     margin: 0;
@@ -8,23 +9,59 @@
 
 body {
     background-color: #222;
+    cursor: url(./assets/UFO.png), pointer;
 }
 
-.img-logo {
-    margin-top: 32px;
+.nav{
+    font-family: 'Architects Daughter', cursive;
+    display: flex;
+    justify-content: center;
+    margin-top: 16px;
+    gap: 32px;
+    background-color: #233b29;
+    padding: 8px;
+    margin-left: 48px;
+    margin-right: 48px;
+    border-radius: 8px;
+}
+
+.nav a{
+    color: #eeee29;
+    text-decoration: none;
 }
 
 .RM{
     text-align: center;
-    border-radius: 16px;
-    margin-bottom: 128px;
+    margin: 16px 16px;
 }
 
-.RM h1{
+.RM img{
+    border-radius: 16px;   
+}
+
+/* .RM h1{
     font-family: 'Mochiy Pop P One', sans-serif;
-    font-size: 192px;
+    font-size: 160px;
     color: #FFFDFA;
     padding-bottom: 32px;
+} */
+
+.prox{
+    font-family: 'Architects Daughter', cursive;
+    text-align: center;
+    font-size: 150px;
+    color: #FFFDFA;
+}
+
+.carrusel-img{
+    display: flex;
+    justify-content: center;
+    gap: 64px;
+    opacity: .14;
+    background-color: #233b29;
+    padding: 16px;
+    margin: 32px 16px;
+    border-radius: 18px;
 }
 
 .characters ul{
@@ -52,20 +89,33 @@ body {
 }
 
 .characters li p{
-    font-family: 'Mochiy Pop P One', sans-serif;
+    
     color: #FFFDFA;
     margin-bottom: 16px;
 }
 
 .characters li h4 {
-    font-family: 'Mochiy Pop P One', sans-serif;
+    font-family: 'Barrio', cursive;
+    font-size: 20px;
     color: #FFFDFA;
     margin-bottom: -8px;
 }
 
 .characters ul li:hover{
     background-color: #233b29;
+    cursor: url(./assets/Monster2.png), pointer;
 }
+
+.link-characters{
+    color: #222;
+    text-decoration: none;
+    margin-bottom: 16px;
+    background-color: #eeee29;
+    padding: 8px;
+    border-radius: 8px;
+}
+
+/* link-characters */
 
 .btn-container{
     display: flex;
@@ -112,7 +162,7 @@ body {
 }
 
 .footer{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #233b29;
     margin: 16px 32px;
     border-radius: 16px;
@@ -166,9 +216,36 @@ body {
     
 }
 
-.footer-container01 img:hover{
+/* .footer-container01 img:hover{
     cursor: url(./assets/RickCursor.png),
     pointer;
+} */
+
+
+
+@keyframes slideInLeft {
+
+    from {
+        transform: translateX(-600px);
+    }
+
+    to {
+        transform: translateX(0);
+    }
+}
+
+.img-morty {
+
+    /* Misma transition pero reducida */
+    animation: slideInLeft 3s ease-in 0s 1 normal none;
+
+    /* animation-name: slideInLeft;
+    animation-duration: 1s;
+    animation-timing-function: ease-in;
+    animation-delay: 0s;
+    animation-iteration-count: 1;
+    animation-direction: normal;
+    animation-fill-mode: none; */
 }
 
 
