--- a/src/App.css
+++ b/src/App.css
@@ -170,13 +170,25 @@ body {
     border: none;
     border-top-left-radius: 16px;
     outline: none;
+    background-color: #233b29;
+    color: #FFFDFA;
 }
 
 .search-container button{
-    padding: 8px;
+    font-family: 'Architects Daughter', cursive;
+    padding: 6.80px;
     border: none;
     outline: none;
     border-bottom-right-radius: 8px;
+    background-color: #233b29;
+    color: #FFFDFA;
+    transition: 50ms;
+}
+
+.search-container button:hover{
+    background-color: #eeee29;
+    color: #233b29;
+    border: 1px solid #FFFDFA;
 }
 
 /* --- CARDS --- */
@@ -224,7 +236,7 @@ body {
 
 .characters ul li:hover{
     background-color: #233b29;
-    border: 2px solid #eeee29
+    border: 2px solid #eeee29;
 }
 
 
@@ -251,12 +263,46 @@ body {
 
 /* --- CHARACTERS DETAILS --- */ 
 
+.object{
+    background-image: url(./assets/universe_planet.png);
+    background-size: cover;
+    background-position: right;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+}
+
+.name{
+    transition: 100ms;
+}
+
+.name:hover{
+    transform: scale(1.05);
+}
+
 .bg-rick{
-    box-shadow: 0px 0px 0px 2px #68d7d7;
+    box-shadow: 0px 16px 0px 4px #a9d3e9;
+    border-radius: 8px;
+    border: 2px solid #233b29;
+    transition: 150ms;
+}
+
+.bg-rick:hover{
+    rotate: 360deg;
+    transform: translate(0px, 100px);
+    cursor: url(./assets/Monster2.png), auto;
 }
 
 .bg-no-rick{
-    box-shadow: 0px 0px 0px 2px #eeee29;
+    box-shadow: 0px 16px 0px 4px #eeee29;
+    border-radius: 8px;
+    border: 2px solid #233b29;
+    transition: 200ms;
+}
+
+.bg-no-rick:hover{
+    rotate: 360deg;
+    transform: translate(0px, 100px);
 }
 
 .details-character{
@@ -331,6 +377,65 @@ body {
     margin: 0px 32px 32px 32px;
 }
 
+.main-characters-title{
+    font-family: 'Architects Daughter', cursive;
+    letter-spacing: 2px;
+    font-size: 48px;
+    color: #eeee29;
+    text-align: center;
+    margin: 32px 0px 32px 0px;
+    border-top: 1px solid #233b29;
+    border-left: 1px solid #233b29;
+    border-right: 1px solid #233b29;
+    border-top-left-radius: 128px;
+    border-top-right-radius: 128px;
+    margin: 16px 128px 0px 128px;
+    padding: 32px;
+    background-color: #233b29;
+}
+
+.img-about{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 32px;
+    border: 2px solid #233b29;
+    border-radius: 16px;
+    padding: 64px;
+    margin: 00px 32px;
+}
+
+.img-about img{
+    border-radius: 30%;
+    opacity: .2;
+    transition: 100ms;
+    box-shadow: 0px 4px 0px 4px #eeee29;
+    transform: rotate(0deg);
+}
+
+.img-about img:hover{
+    opacity: 10;
+    box-shadow: 0px -4px 0px 4px #eeee29;
+    transform: rotate(-2deg);  
+}
+
+.img-about h2{
+    text-align: center;
+    margin-top: 16px;
+    color: #eeee29;
+    font-family: 'Nothing You Could Do', cursive;
+    font-size: 20px;
+    transition: 100ms;
+}
+
+.img-about h2:hover{
+    color: #FFFDFA;
+}
+
+.link-starring{
+    text-decoration: none;
+}
+
 .carrusel-img{
     display: flex;
     justify-content: center;
@@ -375,7 +480,7 @@ body {
     color: #FFFDFA;
     display: flex;
     justify-content: center;
-    align-items: left;
+    /* align-items: left; */
     flex-direction: column;
     gap: 16px;
     width: 50vw;
@@ -603,6 +708,8 @@ body {
     -webkit-transform: scaleX(1);
     transform: scaleX(1);
 }
+
+
 
 
 
