--- a/src/App.css
+++ b/src/App.css
@@ -55,7 +55,7 @@ body {
     gap: 16px;
     text-align: center;
     border: 1px solid #f8f729;
-    border-radius: 8px;
+    border-radius: 16px;
     padding: 128px 48px 128px 48px;
     background-image: url(./assets/login-form.png);
     background-position: left;
@@ -71,16 +71,21 @@ body {
     font-family: 'Architects Daughter', cursive;
     font-size: 1.50rem;
     color: #f8f729;
+    margin-bottom: -8px;
 }
 
 .login-form input{
     color: #FFFDFA;
+    background-color: #1f1d1d;
     padding: 16px;
     width: 300px; 
-    border-radius: 8px;
     border: none;
+    /* border-radius: 8px; */
+    /* border-bottom-width: 1rem; */
+    border-color: #233b29;
     outline: none;
     transition: 200ms;
+    border-radius: 8px;
 }
 
 .login-form input:focus{
@@ -347,19 +352,27 @@ body {
     background-position: bottom; */
 }
 
+/* PLANETS */ 
+
 .full-planets-container h2{
     font-family: 'Architects Daughter', cursive;
     letter-spacing: 2px;
     font-size: 48px;
     color: #eeee29;
     text-align: center;
-    text-align: center;
-    margin: 64px 0px 32px 0px;
+    margin: 64px 64px 0px 64px;
+    padding: 16px;
+    border-top: 1px solid #eeee29;
+    border-left: 1px solid #eeee29;
+    border-right: 1px solid #eeee29;
+    border-top-left-radius: 128px;
+    border-top-right-radius: 128px;
 }
 
 .planets-views{
     display: inline-block;
     margin: 0px 16px 0px 16px;
+    text-align: center;
 }
 
 
@@ -369,6 +382,8 @@ body {
     color: #eeee29;
     margin-top: 8px;
     margin: 0px 16px 0px 16px;
+    font-size: 1rem;
+    text-align: center;   
 }
 
 .planets-container{
@@ -376,18 +391,89 @@ body {
     justify-content: center;
     text-align: center;
     margin-bottom: 32px;
-}
-
-.planet-form{
-    width: 150px;
-    height: 150px;
-    /* background: #eeee29; */
-    border-radius: 50%;
-    margin-bottom: 16px;
-    background: url(./assets/planet.png);
+    border: 1px solid #eeee29;
+    padding: 32px;
+    margin: 0px 32px;
+    border-radius: 16px;
+    background-image: url(./assets/footer.png);
     background-size: cover;
 }
 
+/* PLANETS */
+
+/* .planet-form-boob{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/boob.png);
+    background-size: cover;
+    
+}
+.planet-form-gaia{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/gaia.png);
+    background-size: cover;
+}
+.planet-form-gazorpa{
+    width: 120px;
+    height: 120px;
+  
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/gazorpazorp.png);
+    background-size: cover;
+}
+.planet-form-snake{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/snake.png);
+    background-size: cover;
+}
+.planet-form-earth{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/earth.png);
+    background-size: cover;
+}
+.planet-form-cob{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/cob.png);
+    background-size: cover;
+}
+.planet-form-pluto{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/pluto.png);
+    background-size: cover;
+}
+.planet-form-screaming{
+    width: 120px;
+    height: 120px;
+
+    border-radius: 50%;
+    margin-bottom: 16px;
+    background: url(./assets/boob.png);
+    background-size: cover;
+} */
 
 /* --- STATUS DETAILS --- */
 
